fix align header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,7 @@ body {
   padding: 20px;
   border-radius: 10px 10px 0 0;
   background-color: #FAF6F9;
+  text-align: center;
 }
 
 .boxicon-header {
